--- a/index.html
+++ b/index.html
@@ -20,45 +20,45 @@
     <div id="wrap">
         <header>
             <div class="container">
-                <div class="logo"><a href="">SPACE ISU</a></div>
+                <div class="logo"><a href="sub.html">SPACE ISU</a></div>
                 <div class="menu" onclick="left_menu()">MENU</div>
                 <ul class="left_menu">
                     <li class="nav1">관람·참여
                         <ul class="nav_1">
-                            <li><a href="">전시해설</a></li>
-                            <li><a href="">어린이 미술관</a></li>
-                            <li><a href="">이벤트</a></li>
-                            <li><a href="">레지던시</a></li>
+                            <li><a href="sub.html">전시해설</a></li>
+                            <li><a href="sub.html">어린이 미술관</a></li>
+                            <li><a href="sub.html">이벤트</a></li>
+                            <li><a href="sub.html">레지던시</a></li>
                         </ul>
                     </li>
                     <li class="nav2">통합예약
                         <ul class="nav_2">
-                            <li><a href="">예약하기</a></li>
-                            <li><a href="">예약내역</a></li>
-                            <li><a href="">예약취소</a></li>
+                            <li><a href="sub.html">예약하기</a></li>
+                            <li><a href="sub.html">예약내역</a></li>
+                            <li><a href="sub.html">예약취소</a></li>
                         </ul>
                     </li>
                     <li class="nav3">전시
                         <ul class="nav_3">
-                            <li><a href="#">과거 전시</a></li>
-                            <li><a href="#">현재 전시</a></li>
-                            <li><a href="#">미래 전시</a></li>
+                            <li><a href="sub.html">과거 전시</a></li>
+                            <li><a href="sub.html">현재 전시</a></li>
+                            <li><a href="sub.html">미래 전시</a></li>
                         </ul>
                     </li>
                     <li class="nav4">교육
                         <ul class="nav_4">
-                            <li><a href="#">미술관교육소개</a></li>
-                            <li><a href="#">청소년</a></li>
-                            <li><a href="#">성인</a></li>
-                            <li><a href="#">교육자료실</a></li>
-                            <li><a href="#">참여신청</a></li>
+                            <li><a href="sub.html">미술관교육소개</a></li>
+                            <li><a href="sub.html">청소년</a></li>
+                            <li><a href="sub.html">성인</a></li>
+                            <li><a href="sub.html">교육자료실</a></li>
+                            <li><a href="sub.html">참여신청</a></li>
                         </ul>
                     </li>
                     <li class="nav5">미술연구
                         <ul class="nav_5">
-                            <li><a href="#">아카이브</a></li>
-                            <li><a href="#">연구</a></li>
-                            <li><a href="#">발간자료</a></li>
+                            <li><a href="sub.html">아카이브</a></li>
+                            <li><a href="sub.html">연구</a></li>
+                            <li><a href="sub.html">발간자료</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -87,7 +87,7 @@
                                 <td>(매주 월, 화 및 공휴일 휴관)</td>
                             </tr>
                         </table>
-                        <a href="#">전시소개</a>
+                        <a href="sub.html">전시소개</a>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
                     <h3>SPACE ISU</h3>
                     <h2>밤의 풍경</h2>
                     <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다.</p>
-                    <a href="#">view more +</a>
+                    <a href="sub.html">view more +</a>
                 </div>
                 <div class="artwork_art_img" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <img src="img/main/lee_top.jpg" alt="">
@@ -189,7 +189,7 @@
                                 <img src="img/main/slider4.jpeg" alt="">
                             </div>
                             <div class="slide_text">
-                                <h3>그날의 기억#2</h3>
+                                <h3>그날의 기억sub.html2</h3>
                                 <p>내 작업을 일상을 그린 그림들이다. 나의 일상속에서 느낀 머물고 누르고자 하는 나의 마음, 감정, 기억을 색에 담아서 작업한다.</p>
                             </div>
                         </div>
@@ -279,7 +279,7 @@
                     <h2>SPACE ISU</h2><span>오시는 길</span>
                     <h4>경기도 안산시 단원구 고잔동 535-2번지</h4>
                     <h4>코스모프라자 6층</h4>
-                    <a href="">문의하기</a><a href="">FQA</a>
+                    <a href="sub.html">문의하기</a><a href="sub.html">FQA</a>
                 </div>
                 <div class="map" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <iframe
