--- a/sub.html
+++ b/sub.html
@@ -21,45 +21,45 @@
     <div id="wrap">
         <header>
             <div class="container">
-                <div class="logo"><a href="">SPACE ISU</a></div>
+                <div class="logo"><a href="index.html">SPACE ISU</a></div>
                 <div class="menu">MENU</div>
                 <ul class="left_menu">
                     <li class="nav1">관람·참여
                         <ul class="nav_1">
-                            <li><a href="">전시해설</a></li>
-                            <li><a href="">어린이 미술관</a></li>
-                            <li><a href="">이벤트</a></li>
-                            <li><a href="">레지던시</a></li>
+                            <li><a href="index.html">전시해설</a></li>
+                            <li><a href="index.html">어린이 미술관</a></li>
+                            <li><a href="index.html">이벤트</a></li>
+                            <li><a href="index.html">레지던시</a></li>
                         </ul>
                     </li>
                     <li class="nav2">통합예약
                         <ul class="nav_2">
-                            <li><a href="">예약하기</a></li>
-                            <li><a href="">예약내역</a></li>
-                            <li><a href="">예약취소</a></li>
+                            <li><a href="index.html">예약하기</a></li>
+                            <li><a href="index.html">예약내역</a></li>
+                            <li><a href="index.html">예약취소</a></li>
                         </ul>
                     </li>
                     <li class="nav3">전시
                         <ul class="nav_3">
-                            <li><a href="#">과거 전시</a></li>
-                            <li><a href="#">현재 전시</a></li>
-                            <li><a href="#">미래 전시</a></li>
+                            <li><a href="index.html">과거 전시</a></li>
+                            <li><a href="index.html">현재 전시</a></li>
+                            <li><a href="index.html">미래 전시</a></li>
                         </ul>
                     </li>
                     <li class="nav4">교육
                         <ul class="nav_4">
-                            <li><a href="#">미술관교육소개</a></li>
-                            <li><a href="#">청소년</a></li>
-                            <li><a href="#">성인</a></li>
-                            <li><a href="#">교육자료실</a></li>
-                            <li><a href="#">참여신청</a></li>
+                            <li><a href="index.html">미술관교육소개</a></li>
+                            <li><a href="index.html">청소년</a></li>
+                            <li><a href="index.html">성인</a></li>
+                            <li><a href="index.html">교육자료실</a></li>
+                            <li><a href="index.html">참여신청</a></li>
                         </ul>
                     </li>
                     <li class="nav5">미술연구
                         <ul class="nav_5">
-                            <li><a href="#">아카이브</a></li>
-                            <li><a href="#">연구</a></li>
-                            <li><a href="#">발간자료</a></li>
+                            <li><a href="index.html">아카이브</a></li>
+                            <li><a href="index.html">연구</a></li>
+                            <li><a href="index.html">발간자료</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -138,7 +138,7 @@
                                     회화작품들에
                                     담아낸다.</p>
                             </div>
-                            <a href="">more view</a>
+                            <a href="index.html">more view</a>
                         </li>
                         <li>
                             <img src="img/sub/com2.jpg" alt="">
@@ -148,7 +148,7 @@
                                     그에게는
                                     원초적인 생명력이 꿈틀대는 장소이자 꿈과 현실이 뒤섞인 예측하기 힘든 공간이기도 하다.</p>
                             </div>
-                            <a href="">more view</a>
+                            <a href="index.html">more view</a>
                         </li>
                         <li>
                             <img src="img/sub/com3.jpg" alt="">
@@ -158,7 +158,7 @@
                                     있는지
                                     인터뷰한 내용과, 그들의 삶을 무용가의 움직임을 통해 은유적으로 재해석해 보여준다.</p>
                             </div>
-                            <a href="">more view</a>
+                            <a href="index.html">more view</a>
                         </li>
                     </ul>
                 </div>
@@ -173,7 +173,7 @@
                             <h4>Art Company</h4>
                             <h4>Performance</h4>
                             <span>#미술전시회 #작품발표회 #행사 및 관람</span>
-                            <a href="">more view</a>
+                            <a href="index.html">more view</a>
                         </div>
                     </div>
                 </div>
@@ -182,21 +182,21 @@
                     <ul>
                         <li>
                             <i class="fa-regular fa-newspaper"></i>
-                            <a href="">
+                            <a href="index.html">
                                 <span>공지사항</span>
                                 <span>view more</span>
                             </a>
                         </li>
                         <li>
                             <i class="fa-regular fa-calendar"></i>
-                            <a href="">
+                            <a href="index.html">
                                 <span>열린마당</span>
                                 <span>view more</span>
                             </a>
                         </li>
                         <li>
                             <i class="fa-solid fa-pen-fancy"></i>
-                            <a href="">
+                            <a href="index.html">
                                 <span>문의하기</span>
                                 <span>view more</span>
                             </a>
@@ -211,8 +211,8 @@
                             <p>스페이스 이수의 전시 SNS 바로가기</p>
                         </div>
                         <div class="sns_icon">
-                            <a href=""><img src="img/sub/sns01.png" alt=""></a>
-                            <a href=""><img src="img/sub/sns02.png" alt=""></a>
+                            <a href="index.html"><img src="img/sub/sns01.png" alt=""></a>
+                            <a href="index.html"><img src="img/sub/sns02.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -238,23 +238,23 @@
                     <h2>ART EXHIBITION</h2>
                     <h2>OIL ON CANVAS OF ART SHOW</h2>
                     <ul>
-                        <li><a href="" class="arrow">전시소개<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">전시소개<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="" class="arrow">전시과정<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">전시과정<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="" class="arrow">작품활동<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">작품활동<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="" class="arrow">공지사항<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">공지사항<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
                     </ul>
                     <ul>
-                        <li><a href="" class="arrow">전시목표<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">전시목표<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="" class="arrow">작가소개<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">작가소개<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="" class="arrow">미술관 행사<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">미술관 행사<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="" class="arrow">미술관 소개<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="index.html" class="arrow">미술관 소개<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
                     </ul>
                 </div>
