--- a/sub.html
+++ b/sub.html
@@ -138,7 +138,7 @@
                                     회화작품들에
                                     담아낸다.</p>
                             </div>
-                            <a href="index.html">more view</a>
+                            <a href="">more view</a>
                         </li>
                         <li>
                             <img src="img/sub/com2.jpg" alt="">
@@ -148,7 +148,7 @@
                                     그에게는
                                     원초적인 생명력이 꿈틀대는 장소이자 꿈과 현실이 뒤섞인 예측하기 힘든 공간이기도 하다.</p>
                             </div>
-                            <a href="index.html">more view</a>
+                            <a href="">more view</a>
                         </li>
                         <li>
                             <img src="img/sub/com3.jpg" alt="">
@@ -158,7 +158,7 @@
                                     있는지
                                     인터뷰한 내용과, 그들의 삶을 무용가의 움직임을 통해 은유적으로 재해석해 보여준다.</p>
                             </div>
-                            <a href="index.html">more view</a>
+                            <a href="">more view</a>
                         </li>
                     </ul>
                 </div>
@@ -173,7 +173,7 @@
                             <h4>Art Company</h4>
                             <h4>Performance</h4>
                             <span>#미술전시회 #작품발표회 #행사 및 관람</span>
-                            <a href="index.html">more view</a>
+                            <a href="">more view</a>
                         </div>
                     </div>
                 </div>
@@ -182,21 +182,21 @@
                     <ul>
                         <li>
                             <i class="fa-regular fa-newspaper"></i>
-                            <a href="index.html">
+                            <a href="">
                                 <span>공지사항</span>
                                 <span>view more</span>
                             </a>
                         </li>
                         <li>
                             <i class="fa-regular fa-calendar"></i>
-                            <a href="index.html">
+                            <a href="">
                                 <span>열린마당</span>
                                 <span>view more</span>
                             </a>
                         </li>
                         <li>
                             <i class="fa-solid fa-pen-fancy"></i>
-                            <a href="index.html">
+                            <a href="">
                                 <span>문의하기</span>
                                 <span>view more</span>
                             </a>
@@ -211,8 +211,8 @@
                             <p>스페이스 이수의 전시 SNS 바로가기</p>
                         </div>
                         <div class="sns_icon">
-                            <a href="index.html"><img src="img/sub/sns01.png" alt=""></a>
-                            <a href="index.html"><img src="img/sub/sns02.png" alt=""></a>
+                            <a href=""><img src="img/sub/sns01.png" alt=""></a>
+                            <a href=""><img src="img/sub/sns02.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -238,23 +238,23 @@
                     <h2>ART EXHIBITION</h2>
                     <h2>OIL ON CANVAS OF ART SHOW</h2>
                     <ul>
-                        <li><a href="index.html" class="arrow">전시소개<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">전시소개<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="index.html" class="arrow">전시과정<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">전시과정<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="index.html" class="arrow">작품활동<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">작품활동<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="index.html" class="arrow">공지사항<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">공지사항<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
                     </ul>
                     <ul>
-                        <li><a href="index.html" class="arrow">전시목표<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">전시목표<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="index.html" class="arrow">작가소개<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">작가소개<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="index.html" class="arrow">미술관 행사<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">미술관 행사<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
-                        <li><a href="index.html" class="arrow">미술관 소개<i class="fa-solid fa-arrow-right-long"></i></a>
+                        <li><a href="" class="arrow">미술관 소개<i class="fa-solid fa-arrow-right-long"></i></a>
                         </li>
                     </ul>
                 </div>
