--- a/sub.html
+++ b/sub.html
@@ -94,7 +94,6 @@
                     <p>이번 전시는 예술가 개인으로서 현실을 인식하고 각자의 고유한 방식으로 사회 속에서 겪는 내밀한 모험의 과정에서부터,</p>
                     <p>그렇게 만들어진 작품이 어떻게 사회 속의 보편적인 인간의 모험을 담아내고 있는지 엿볼 수 있을 것이다.</p>
                 </div>
-
                 <div class="space_container">
                     <div class="space_img">
                         <div class="space_art">
@@ -141,7 +140,7 @@
                             <a href="">more view</a>
                         </li>
                         <li>
-                            <img src="img/sub/com2.jpg" alt="">
+                            <img src="img/sub/com_1.jpg" alt="">
                             <div class="company_txt">
                                 <h3>Space Art Lap</h3>
                                 <p><b>박광수</b>는 주로 펜, 먹이나 검은색 아크릴 물감으로 드로잉을 한다. 그의 작품에 반복적으로 등장하는 숲은 익숙하게 보이지만,
@@ -151,7 +150,7 @@
                             <a href="">more view</a>
                         </li>
                         <li>
-                            <img src="img/sub/com3.jpg" alt="">
+                            <img src="img/sub/com_2.jpg" alt="">
                             <div class="company_txt">
                                 <h3>Space Art Lap</h3>
                                 <p><b>조혜정&김숙현</b>은 영상작품을 통해 한국 사회에서 다양한 직업에 있는 사람들이 삶에서 어떻게 나름의 균형을 맞추면서 살아가고
@@ -259,9 +258,7 @@
                     </ul>
                 </div>
             </div>
-
         </div>
-    </div>
     </div>
 </body>
 
