--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>
             <div class="container">
                 <div class="logo"><a href="sub.html">SPACE ISU</a></div>
-                <div class="menu" onclick="left_menu()">MENU</div>
+                <div class="menu">MENU</div>
                 <ul class="left_menu">
                     <li class="nav1">관람·참여
                         <ul class="nav_1">
